solved layout issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,7 +71,7 @@ body {
             }
 
             &-image {
-                width: fit-content;
+                width: 2rem;
                 opacity: 0.7;
 
                 &:hover {
